# c24_makeathon_game

./: .gitignore  Dockerfile  pyproject.toml
.streamlit/: config.toml
shutup_gpt/: app.py  prompts.py  session.py  slack.py  utils.py  validate_input.py
