[tool.poetry]
name = "shutup-gpt"
version = "0.1.0"
description = ""
authors = ["Seán Baufeld <sean.baufeld@check24.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.23.3"
streamlit = "^1.33.0"
langchain = "^0.1.16"
tiktoken = "^0.6.0"
pandas = "^2.2.2"
pytz = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
